# caramello-backend

./: AGENTS.md  README.md  alembic.ini  pyproject.toml
.clinerules/: context.md
alembic/: env.py
docs/: ai_workflow.md  commit_rules.md  pr_rules.md  project_structure.md  project_vision.md  python_style_guide.md  quality_rules.md  security_rules.md  style_guide.md
dsl/: manifest.yaml  schema.yaml
dsl/entities/: family.yaml  family_invitation.yaml  family_member.yaml  user.yaml
openapi/v1/: spec.yaml
scripts/: generate_openapi_spec.py  generate_pydantic_schemas.py
